--- a/src/App.css
+++ b/src/App.css
@@ -5,15 +5,45 @@
   text-align: center;
 }
 
+.flex-container {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  gap: 15px;
+  align-items: center;
+  justify-content: center;
+}
+
+
+.card {
+  border: 1px, solid, red;
+  width: 200px;
+  height: 250px;
+  justify-content: center;
+  align-items: center;
+  padding: 15px;
+}
+
+.itemDetail {
+  display: flex;
+  flex-direction: column;
+  border: 1px, solid, red;
+  width: 200px;
+  justify-content: center;
+  align-items: center;
+}
+
 .logo {
   height: 6em;
   padding: 1.5em;
   will-change: filter;
   transition: filter 300ms;
 }
+
 .logo:hover {
   filter: drop-shadow(0 0 2em #646cffaa);
 }
+
 .logo.react:hover {
   filter: drop-shadow(0 0 2em #61dafbaa);
 }
@@ -22,6 +52,7 @@
   from {
     transform: rotate(0deg);
   }
+
   to {
     transform: rotate(360deg);
   }
